feat: adjust readme, added keys during build

--- a/.env.dist
+++ b/.env.dist
@@ -46,7 +46,7 @@ REDIS_URL=redis://redis:6379
 ###< redis ###
 
 ###> app ###
-APP_NAME=Lead Management API
+APP_NAME="Lead Management API"
 APP_URL=http://localhost:8000
 APP_TIMEZONE=UTC
 APP_LOCALE=en
