--- a/config/packages/lexik_jwt_authentication.yaml
+++ b/config/packages/lexik_jwt_authentication.yaml
@@ -1,5 +1,5 @@
 lexik_jwt_authentication:
-    secret_key: '%kernel.project_dir%/config/jwt/private.key'
-    public_key: '%kernel.project_dir%/config/jwt/public.key'
-    pass_phrase: 'your_passphrase_here'
-    token_ttl: 3600 # 1 hour 
+    secret_key: '%kernel.project_dir%/config/jwt/private.pem'
+    public_key: '%kernel.project_dir%/config/jwt/public.pem'
+    pass_phrase: '123456'
+    token_ttl: 3600 # 1 hour
